[package]
name = "mqtt-to-sqlite"
version = "0.1.4"
edition = "2021"
readme = "README.md"
description = "Subscribes to MQTT topics and stores the data in time-series database."
license = "GPLv2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Ahti Legonkov"
copyright = "Ahti Legonkov"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
enable = false

[profile.release]
strip = true
lto = true
panic = "abort"

[dependencies]
paho-mqtt = { version = "0.11.1", features = ["vendored-ssl"] }
futures = "0.3.23"
#async-channel = "1.6"
#crossbeam-channel = "0.5"
#log = "0.4"
#thiserror = "1.0"
#env_logger = "0.9.0"
async-std = "1.12.0"
chrono = "0.4.22"

toml = "0.5.9"
serde_derive = "1.0.143"
serde = "1.0.143"
serde_json = "1.0.83"
jq-rs = { version = "0.4.1", features = ["bundled"] }

rusqlite = { version = "0.28.0", features = ["bundled"] }